--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,95 +4,14 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
 
-#mainNav {
-  min-height: 56px;
-  background-color: transparent;
-}
-
-#mainNav .navbar-toggler {
-  font-size: 80%;
-  padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
-}
-
-#mainNav .navbar-toggler:focus {
-  outline: none;
-}
-
-#mainNav .navbar-brand {
-  color: #161616;
-  font-weight: 700;
-  padding: .9rem 0;
-}
-
-#mainNav .navbar-nav .nav-item:hover {
-  color: fade(white, 80%);
-  outline: none;
-  background-color: transparent;
-}
-
-#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
-  outline: none;
-  background-color: transparent;
-}
-
-@media (min-width: 992px) {
-  #mainNav {
-    padding-top: 0;
-    padding-bottom: 0;
-    border-bottom: none;
-    background-color: transparent;
-    -webkit-transition: background-color 0.3s ease-in-out;
-    transition: background-color 0.3s ease-in-out;
-  }
-  #mainNav .navbar-brand {
-    padding: .5rem 0;
-    color: rgba(255, 255, 255);
-  }
-  #mainNav .nav-link {
-    -webkit-transition: none;
-    transition: none;
-    padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255);
-  }
-  #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
-  }
-  #mainNav .nav-link:active {
-    color: white;
-  }
-  #mainNav.navbar-shrink {
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #161616;
-  }
-  #mainNav.navbar-shrink .nav-link {
-    color: #161616;
-    padding: 1.5rem 1.5rem 1.25rem;
-    border-bottom: 0.25rem solid transparent;
-  }
-  #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
-  }
-  #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
-  }
-  #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
-    outline: none;
-    border-bottom: 0.25rem solid #64a19d;
-  }
-}
 
 .masthead {
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 35rem;
+  min-height: 15rem;
   padding: 15rem 0;
-/*  background: url("../img/ocean-view-in-mexico_4460x4460.jpg");*/
+  background: url("../img/ocean-view-in-mexico_4460x4460.jpg");
   background: linear-gradient(to bottom,rgba(22,22,22,.1) 0,rgba(22,22,22,.5) 75%,#161616 100%),url(../img/ocean-view-in-mexico_4460x4460.jpg);
   background-position: top center;
   background-repeat: no-repeat;
@@ -101,8 +20,7 @@
 }
 
 .masthead h1 {
- font-family: 'Work Sans', sans-serif;
-
+  font-family: 'Work Sans', sans-serif;
   font-size: 2.5rem;
   line-height: 6.5rem;
   background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
@@ -111,7 +29,7 @@
 }
 
 .masthead h2 {
-  max-width: 20rem;
+  max-width: 30rem;
   font-size: 1.25rem;
   color: white;
 }
@@ -126,7 +44,7 @@
 @media (min-width: 992px) {
   .masthead {
     height: 100vh;
-    min-height: 35rem;
+    min-height: 25rem;
     padding: 0;
   }
   .masthead h1 {
