--- a/css/agency.css
+++ b/css/agency.css
@@ -65,8 +65,9 @@ section h3.section-subheading {
 
 .btn {
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   font-weight: 700;
+  border-color: #f2f2f2;
+  color: #f2f2f2;
 }
 
 .btn-xl {
@@ -75,8 +76,7 @@ section h3.section-subheading {
 }
 
 .btn-primary {
-  background-color: #fed136;
-  border-color: #fed136;
+  border-color: #f2f2f2;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
@@ -192,22 +192,22 @@ header.masthead {
 
 header.masthead .intro-text {
   padding-top: 150px;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
 }
 
 header.masthead .intro-text .intro-lead-in {
-  font-size: 18px;
-  font-style: italic;
-  line-height: 22px;
+  font-size: 24px;
+  line-height: 1.33;
+  font-weight: 400;
   margin-bottom: 25px;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 50px;
+  font-size: 45px;
+  font-weight: 600;
+  line-height: 1.1;
   margin-bottom: 25px;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
@@ -215,22 +215,21 @@ header.masthead .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 300px;
+    padding-top: 250px;
     padding-bottom: 200px;
   }
   header.masthead .intro-text .intro-lead-in {
-    font-size: 20px;
-    font-style: italic;
-    line-height: 40px;
+    font-size: 24px;
+    line-height: 1.3;
     margin-bottom: 25px;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-    /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 45px;
-    font-weight: 900;
-    line-height: 75px;
+    font-size: 65px;
+    font-weight: 600;
+    line-height: 1.1;
     margin-bottom: 50px;
+    letter-spacing: -.009em;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    /* font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   }
