--- a/css/agency.css
+++ b/css/agency.css
@@ -6,12 +6,12 @@
 
 body {
   overflow-x: hidden;
-  /*font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
 p {
-  line-height: 1.75;
+  line-height: 1.53;
+  font-size: 18px;
 }
 
 a {
@@ -23,7 +23,11 @@ a:hover {
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #a3a3a3 !important;
+}
+
+.contain {
+  margin: 0 150px 45px 150px;
 }
 
 h1,
@@ -33,7 +37,6 @@ h4,
 h5,
 h6 {
   font-weight: 700;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
@@ -44,22 +47,20 @@ section {
 section h2.section-heading {
   font-size: 20px;
   margin-top: 0;
-  padding-bottom: 45px;
+  padding-bottom: 25px;
 }
 
 section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
-  font-style: italic;
-  margin-bottom: 75px;
+  margin-bottom: 25px;
   text-transform: none;
-  /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
 @media (min-width: 768px) {
   section {
-    padding: 50px 0;
+    padding: 80px 0;
   }
 }
 
@@ -125,12 +126,10 @@ img::-moz-selection {
   border: 0;
   background-color: #fed136;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 #mainNav .navbar-brand {
   color: #fed136;
-  /*font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
@@ -145,7 +144,6 @@ img::-moz-selection {
   letter-spacing: 1px;
   color: white;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
@@ -201,7 +199,6 @@ header.masthead .intro-text .intro-lead-in {
   font-weight: 400;
   margin-bottom: 25px;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 header.masthead .intro-text .intro-heading {
@@ -210,7 +207,6 @@ header.masthead .intro-text .intro-heading {
   line-height: 1.1;
   margin-bottom: 25px;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 @media (min-width: 768px) {
@@ -221,7 +217,7 @@ header.masthead .intro-text .intro-heading {
   header.masthead .intro-text .intro-lead-in {
     font-size: 24px;
     line-height: 1.3;
-    margin-bottom: 25px;
+     margin: 0 150px 45px 150px;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   }
   header.masthead .intro-text .intro-heading {
@@ -231,18 +227,21 @@ header.masthead .intro-text .intro-heading {
     margin-bottom: 50px;
     letter-spacing: -.009em;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-   /* font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
   }
 }
 
 .service-heading {
-  margin: 15px 0;
+  margin: 15px 0 30px 0;
   text-transform: none;
 }
 
 .description {
   padding: 50px 0;
   background: #f2f2f2;
+}
+
+.description-heading {
+  margin-bottom: 30px;
 }
 
 #portfolio .portfolio-item {
@@ -310,7 +309,6 @@ header.masthead .intro-text .intro-heading {
   font-style: italic;
   margin: 0;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 #portfolio * {
@@ -676,9 +674,10 @@ footer {
 footer span.copyright {
   font-size: 90%;
   line-height: 40px;
+  font-weight: 400;
   text-transform: none;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
+ 
 }
 
 footer ul.quicklinks {
@@ -687,7 +686,6 @@ footer ul.quicklinks {
   margin-bottom: 0;
   text-transform: none;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-  /*font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
 }
 
 ul.social-buttons {
