--- a/css/agency.css
+++ b/css/agency.css
@@ -11,9 +11,9 @@ section.pricing {
 
 .pricing .card {
   border: none;
-  border-radius: 1rem;
+  border-radius: .3rem;
   transition: all 0.2s;
-  box-shadow: 0.5rem 0.5rem 1rem 0.5rem rgba(0, 0, 0, 0.1);
+/*  box-shadow: 0.5rem 0.5rem 1rem 0.5rem rgba(0, 0, 0, 0.1);*/
 }
 
 .pricing hr {
