--- a/css/agency.css
+++ b/css/agency.css
@@ -50,7 +50,7 @@ section.pricing {
   letter-spacing: .1rem;
   font-weight: bold;
   padding: 1rem;
-  opacity: 0.7;
+/*  opacity: 0.7;*/
   transition: all 0.2s;
 }
 
@@ -139,13 +139,9 @@ section h3.section-subheading {
   padding: 20px 40px;
 }
 
-.btn-primary {
-  border-color: #f2f2f2;
-}
-
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  background-color: #00cece !important;
+  border-color: #00cece !important;
   color: white;
 }
 
