--- a/css/agency.css
+++ b/css/agency.css
@@ -8,6 +8,10 @@ section.pricing {
   background: #fff;
 }
 
+section#services {
+background: #f2f2f2;
+}
+
 .start {
   border-radius: 3px;
   border-color: #f2f2f2;
@@ -58,7 +62,7 @@ section.pricing {
 }
 
 .pricing .text-muted {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .pricing .btn {
@@ -247,7 +251,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #212529;
+    background-color: #232a43;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
