--- a/css/agency.css
+++ b/css/agency.css
@@ -260,7 +260,7 @@ img::-moz-selection {
 }
 
 header.masthead {
-  text-align: center;
+  text-align: left;
   color: white;
   background-image: url("../img/header-bg2.jpg");
   background-repeat: no-repeat;
@@ -283,7 +283,7 @@ header.masthead .intro-text .intro-lead-in {
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 45px;
+  font-size: 35px;
   font-weight: 600;
   line-height: 1.1;
   margin-bottom: 25px;
@@ -302,7 +302,7 @@ header.masthead .intro-text .intro-heading {
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 65px;
+    font-size: 55px;
     font-weight: 600;
     line-height: 1.1;
     margin-bottom: 50px;
